fix(shs-5845): fix extra spacing in full width well in pages with sidebar

--- a/docroot/themes/humsci/humsci_basic/src/scss/objects/_layouts.row.scss
+++ b/docroot/themes/humsci/humsci_basic/src/scss/objects/_layouts.row.scss
@@ -55,7 +55,9 @@
 
     .field-hs-row-components,
     .field-hs-collection-items {
-      @include hb-page-width;
+      .hb-three-column--no-sidebar & {
+        @include hb-page-width;
+      }
     }
   }
 
